[gd_scene load_steps=6 format=3 uid="uid://3s30xhs7xn4c"]

[ext_resource type="Script" path="res://Network/Network.gd" id="1_63yud"]
[ext_resource type="Theme" uid="uid://dpjbycgoquxs5" path="res://UI/MinimalUI.tres" id="2_g3vca"]
[ext_resource type="FontFile" uid="uid://dbvlh7iiult7b" path="res://UI/Abaddon Light.ttf" id="3_2ytxj"]
[ext_resource type="FontFile" uid="uid://vvs363rqnjeo" path="res://UI/Abaddon Bold.ttf" id="4_uattg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtm5q"]
bg_color = Color(0.278431, 0.117647, 0.156863, 1)

[node name="Network" type="Node2D"]
script = ExtResource("1_63yud")

[node name="MainMenuCanvas" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="MainMenuCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("2_g3vca")
theme_override_styles/panel = SubResource("StyleBoxFlat_mtm5q")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MainMenuCanvas/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuCanvas/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "batun"
horizontal_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "a battle game"
horizontal_alignment = 1

[node name="user" type="LineEdit" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_g3vca")
theme_override_fonts/font = ExtResource("3_2ytxj")
placeholder_text = "username"
max_length = 18
caret_blink = true
caret_blink_interval = 0.5

[node name="address" type="LineEdit" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_g3vca")
theme_override_fonts/font = ExtResource("3_2ytxj")
placeholder_text = "Enter Address (optional)"
caret_blink = true
caret_blink_interval = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Choose a color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 8
text = "Pick a color"
flat = true
alignment = 2
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_g3vca")
theme_override_fonts/font = ExtResource("4_uattg")
text = "Host
"

[node name="Join" type="Button" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_g3vca")
theme_override_fonts/font = ExtResource("4_uattg")
disabled = true
text = "Join
"

[node name="CheckButton" type="CheckButton" parent="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_uattg")
theme_override_font_sizes/font_size = 12
text = "UPNP"

[connection signal="text_changed" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/user" to="." method="_on_user_text_changed"]
[connection signal="color_changed" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="toggled" from="MainMenuCanvas/MainMenu/MarginContainer/VBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
